--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,7 @@ li {
     --btnBg: var(--black);
     --btnFontColor: var(--white);
     --navBarActiveColor: var(--maroon);
+    --iconColor: var(--white);
 }
 
 .dark-theme {
@@ -51,6 +52,7 @@ li {
     --btnBg: var(--white);
     --btnFontColor: var(--nightmodeblack);
     --navBarActiveColor: var(--nightmodepurple);
+    --iconColor: var(--nightmodeblue);
 }
 
 
@@ -59,10 +61,10 @@ li {
 
 /* Button Start */
 
-.btn {
-    position: absolute;
-    top: 10px;
-    left: 450px;
+.btnToDark {
+    position: fixed;
+    bottom: 10px;
+    right: 100px;
     height: 50px;
     width: 50px;
     border-radius: 50%;
@@ -73,13 +75,41 @@ li {
     cursor: pointer;
 }
 
-.btn:focus {
+.btnToDark:focus {
     outline-style: none;
 }
 
-.btn:hover {
+.btnToDark:hover {
     background-color: gray;
 }
+
+.btnToLight {
+    position: fixed;
+    bottom: 10px;
+    right: 100px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border: none;
+    font-size: 12px;
+    color: var(--btnFontColor);
+    background-color: var(--btnBg);
+    cursor: pointer;
+}
+
+.btnToLight:focus {
+    outline-style: none;
+}
+
+.btnToLight:hover {
+    background-color: gray;
+}
+
+
+/*Button End */
+
+
+/*Icons Start */
 
 .fa-moon {
     color: honeydew;
@@ -89,8 +119,28 @@ li {
     color: black;
 }
 
+.fa-book {
+    color: var(--iconColor);
+}
 
-/*Button End */
+.fa-home {
+    color: var(--iconColor);
+}
+
+.fa-phone {
+    color: var(--iconColor);
+}
+
+.fa-archive {
+    color: var(--iconColor);
+}
+
+.fa-user {
+    color: var(--iconColor);
+}
+
+
+/* Icons End */
 
 
 /* Nav Bar starts here*/
