--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,86 @@ li {
 /*End color scheme*/
 
 
+/* Toggler */
+
+* {
+    box-sizing: border-box;
+}
+
+.toggle-box {
+    position: fixed;
+    bottom: 10px;
+    right: 100px;
+    transition: background 0.2s linear;
+}
+
+.checkbox {
+    opacity: 0;
+    position: absolute;
+}
+
+.label {
+    background-color: #111;
+    border-radius: 50px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
+    position: relative;
+    height: 26px;
+    width: 50px;
+    transform: scale(1.5);
+}
+
+.label .ball {
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    height: 22px;
+    width: 22px;
+    transform: translateX(0px);
+    transition: transform 0.2s linear;
+}
+
+.checkbox:checked+.label {
+    background-color: grey;
+}
+
+.checkbox:checked+.label .ball {
+    transform: translateX(24px);
+    background-color: black;
+}
+
+
+/*Toggler End */
+
+
 /* Button Start */
+
+.btn {
+    position: fixed;
+    bottom: 10px;
+    right: 100px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border: none;
+    font-size: 12px;
+    color: var(--btnFontColor);
+    background-color: var(--btnBg);
+    cursor: pointer;
+}
+
+.btn:focus {
+    outline-style: none;
+}
+
+.btn:hover {
+    background-color: gray;
+}
 
 .btnToDark {
     position: fixed;
@@ -112,11 +191,11 @@ li {
 /*Icons Start */
 
 .fa-moon {
-    color: honeydew;
+    color: black;
 }
 
 .fa-sun {
-    color: black;
+    color: honeydew;
 }
 
 .fa-book {
