Fixed Night Mode (really)

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,14 @@
+@media (prefers-color-scheme: dark) {
+    body {
+        --bg: var(--nightmodeblack);
+        --fontColor: var(--nightmodeblue);
+        --btnBg: var(--white);
+        --btnFontColor: var(--nightmodeblack);
+        --navBarActiveColor: var(--nightmodepurple);
+        --iconColor: var(--nightmodeblue);
+    }
+}
+
 :root {
     --eggshell: #DDA;
     --green: #00FF00;
