Filled out html pages somewhat

--- a/css/main.css
+++ b/css/main.css
@@ -30,9 +30,10 @@ li {
     list-style: square;
 }
 
-#msg {
+
+/*#msg {
     font-family: monospace;
-}
+}*/
 
 
 /*Color Scheme for light and dark themes*/
