--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,10 @@
 body {
     background: var(--bg);
     background-image: var(--bgImg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 100vh;
 }
 
 .textbox {
@@ -25,46 +29,13 @@ body {
     opacity: .8;
 }
 
-footer {
+.photo_credits {
     text-align: center;
+    position: absolute;
     bottom: 0;
     width: 100%;
+    z-index: 1;
 }
-
-
-/*Background image */
-
-
-/*
-.bg-container {
-    width: 100%;
-    height: 300px;
-    border: 1px solid #000;
-    position: relative;
-}
-
-.bg-container .content {
-    position: absolute;
-    z-index: 999;
-    text-align: center;
-    width: 100%;
-}
-
-.bg-container::after {
-    content: "";
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    z-index: -99;
-    background-image: var(--bgImg);
-    background-size: ;
-    opacity: 0.4;
-}
-
-
-/*Background image end*/
 
 ul {
     font-family: helvetica;
@@ -76,6 +47,14 @@ li {
 
 .list {
     list-style: square;
+}
+
+img {
+    opacity: 1.0;
+}
+
+.opaque-image {
+    opacity: 1;
 }
 
 
@@ -148,11 +127,13 @@ span.tumnus.fruity:after {
     bottom: 10px;
     right: 100px;
     transition: background 0.2s linear;
+    z-index: 3;
 }
 
 .checkbox {
     opacity: 0;
     position: absolute;
+    z-index: 5;
 }
 
 .label {
@@ -167,6 +148,7 @@ span.tumnus.fruity:after {
     height: 26px;
     width: 50px;
     transform: scale(1.5);
+    z-index: 4;
 }
 
 .label .ball {
@@ -179,6 +161,10 @@ span.tumnus.fruity:after {
     width: 22px;
     transform: translateX(0px);
     transition: transform 0.2s linear;
+}
+
+.label .chk {
+    padding: 0px;
 }
 
 .checkbox:checked+.label {
@@ -222,6 +208,14 @@ span.tumnus.fruity:after {
 
 .fa-user {
     color: var(--iconColor);
+}
+
+.fa-linkedin {
+    margin: 5px
+}
+
+.fa-github-square {
+    margin: 5px
 }
 
 
@@ -319,3 +313,15 @@ span.tumnus.fruity:after {
 
 
 /*Carousel End*/
+
+.carousel-container {
+    width: 30%;
+    margin: auto;
+    overflow: hi
+}
+
+.carousel-slide {
+    display: flex;
+    width: 100%;
+    height: 500px;
+}
